...


final class ProfileViewController: UIViewController {
    var presenter: ProfilePresenterProtocol?
    private let oAuth2Storage = OAuth2TokenStorage.shared
    private let avatarImage: UIImageView = UIImageView()
    private let logoutButton: UIButton = UIButton()
    
    let nameLabel: UILabel = configLabel(font: UIFont.systemFont(ofSize: 23, weight: .semibold),
                                         color: .white)
    let loginNameLabel: UILabel = configLabel(font: UIFont.systemFont(ofSize: 13),
                                              color: .gray)
    let descriptionLabel: UILabel = configLabel(font: UIFont.systemFont(ofSize: 13),
...
        }
        let no = UIAlertAction(title: "Нет", style: .default) { _ in
            alert.dismiss(animated: true)
        }
        alert.addAction(yes)
        alert.addAction(no)
        yes.accessibilityIdentifier = "yesAlertButton"
        no.accessibilityIdentifier = "noAlertButton"
        self.present(alert, animated: true, completion: nil)
    }
    
    @objc
    private func didTapButton() {
...
