...
            \.estimatedProgress,
             options: [],
             changeHandler: { [weak self] _, _ in
                 guard let self = self else { return }
                 presenter?.didUpdateProgressValue(webView.estimatedProgress)
             })
        webView.accessibilityIdentifier = "UnsplashWebView"
        
    }
    
    func setProgressValue(_ newValue: Float) {
        progressView.progress = newValue
    }
...
